Swagger API for Serena
